Added pop artists

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                         <li>
                           <p><strong>Popular</strong></p>
                         </li>
-                        <li><a href="#">Carlsbad</a></li>
-                        <li><a href="#">Downtown</a></li>
-                        <li><a href="#">Mission Beach</a></li>
-                        <li><a href="#">Normal Heights</a></li>
-                        <li><a href="#">Ocean Beach</a></li>
-                        <li><a href="#">Pacific Beach</a></li>
+                        <li><a href="./bowen.html">Aaron Bowen</a></li>
+                        <li><a href="#">Karin Carson/a></li>
+                        <li><a href="#">Nards</a></li>
+                        <li><a href="#">71 Fish</a></li>
+                        <li><a href="#">Talented</a></li>
+                        <li><a href="#">Walt Richards</a></li>
                       </ul>
                       <ul class="col-md-6 list-unstyled">
                         <li>
