spaced out titles

--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@
 
 
 
-           
-            <h2>Top Venues</h2>
+           <div class ="col-md-12"> 
+            <h2 class = "topic">Top Venues</h2>
+            </div>
             <div class="col-md-3">
             <img src="./images/98.jpg" alt="">
               <p>98 Bottles </p>
@@ -246,7 +247,9 @@
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
 <hr>
-            <h2>Popular Events</h2>
+            <div class ="col-md-12"> 
+            <h2 class = "topic">Popular Events</h2>
+            </div>
             <div class="col-md-3">
             <img src="./images/julian.jpg" alt="">
               <p>Artpower! Julian Page<br/>December 20</p>
@@ -268,7 +271,9 @@
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
            <hr>
-            <h2>Top Sales</h2>
+            <div class ="col-md-12"> 
+            <h2 class = "topic">Top sales</h2>
+            </div>
             <div class="col-md-3">
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
