more spacing on topics

--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
       <div class="row">
         <div class="col-md-8">
 
-<h2>Featured Artists</h2>
+<div class ="col-md-12"> 
+            <h2 class = "top">Featured Artists</h2>
+            </div>
 <div class= "col-md-12" id="carousel_home_page" class="carouselslide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -297,7 +299,9 @@
         </div><!--/.col-xs-12.col-sm-9-->
 
         <div class="col-md-4" class= "idk" id="sidebar" role="navigation">
-        <h2>Concert Feed</h2>
+        <div class ="col-md-12"> 
+            <h2 class = "top">Concert Feed</h2>
+            </div>
 
           
             <iframe class ="idk" src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=400&amp;wkst=1&amp;bgcolor=%2366cccc&amp;src=alrodz018%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style=" border-width:0 " width="400" height="361" frameborder="0" scrolling="no"></iframe>
