--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
 <div class ="col-md-12"> 
             <h2 class = "top">Featured Artists</h2>
             </div>
-<div class= "col-md-12" id="carousel_home_page" class="carouselslide" data-ride="carousel">
+
+<div class= "col-md-12">
+<div id ="carousel-example-generic"  id="carousel_home_page" class="carouselslide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#carousel_home_page" data-slide-to="0" class="active"></li>
@@ -220,6 +222,7 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div> <!-- End of carousel-->
+                </div>
 
 
 
