Fixed links on calendar page

--- a/calendar.html
+++ b/calendar.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>LocalMusic</title>
+    <title>LocalMusic - Calendar</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
    <div class="navbar yamm navbar-default navbar">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand">Local Music</a>
+          <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="./index.html" class="navbar-brand">Local Music</a>
         </div>
         <div id="navbar-collapse-1" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -51,23 +51,23 @@
                         <li>
                           <p><strong>Featured Artists</strong></p>
                         </li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
+                        <li><a href="./bowen.html">Aaron Bowen</a></li>
+                        <li><a href="#">Karin Carson</a></li>
+                        <li><a href="#">Nards</a></li>
+                        <li><a href="#">71 Fish</a></li>
+                        <li><a href="#">Talented</a></li>
+                        <li><a href="#">Walt Richards</a></li>
                       </ul>
 
                       <ul class="col-sm-6 list-unstyled">
                         <li>
                           <p><strong>Artists A-Z</strong></p>
                         </li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
+                        <li><a href="./bowen.html">Aaron Bowen</a></li>
+                        <li><a href="#">Aaron Poehler</a></li>
+                        <li><a href="#">Aaron Zigman</a></li>
+                        <li><a href="#">A Battle to Fight</a></li>
+                        <li><a href="#">Abigail's Attic</a></li>
                         <li><a href="#"> See All</a></li>
                       </ul>
                     </div>
