--- a/index.html
+++ b/index.html
@@ -24,19 +24,22 @@
     <link href="./yamm/yamm.css" rel="stylesheet">
     <link href="./css/offcanvas.css" rel="stylesheet">
 
+<link href="./css/main.css" rel="stylesheet">
 
 
+    <!-- I commented this stuff out, not sure if we need it
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
-    <link href="./css/main.css" rel="stylesheet">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script> -->
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="./js/ie-emulation-modes-warning.js"></script>
+    
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -66,7 +69,7 @@
                           <p><strong>Popular</strong></p>
                         </li>
                         <li><a href="./bowen.html">Aaron Bowen</a></li>
-                        <li><a href="#">Karin Carson/a></li>
+                        <li><a href="#">Karin Carson</a></li>
                         <li><a href="#">Nards</a></li>
                         <li><a href="#">71 Fish</a></li>
                         <li><a href="#">Talented</a></li>
