--- a/bowen.html
+++ b/bowen.html
@@ -167,7 +167,7 @@
           <div class="row">
             <div class="col-md-12">
 
-              <img src = "./images/bowen.jpg">
+              <img src = "./images/bowen2.jpg" width = "715">
 
               <h3>About</h3>
 
