--- a/bowen.html
+++ b/bowen.html
@@ -35,7 +35,7 @@
      <div class="navbar yamm navbar-default navbar">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand">Local Music</a>
+          <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="./index.html" class="navbar-brand">Local Music</a>
         </div>
         <div id="navbar-collapse-1" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -51,12 +51,12 @@
                         <li>
                           <p><strong>Featured Artists</strong></p>
                         </li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
+                        <li><a href="./bowen.html">Aaron Bowen</a></li>
+                        <li><a href="#">Karin Carson</a></li>
+                        <li><a href="#">Nards</a></li>
+                        <li><a href="#">71 Fish</a></li>
+                        <li><a href="#">Talented</a></li>
+                        <li><a href="#">Walt Richards</a></li>
                       </ul>
 
                       <ul class="col-sm-6 list-unstyled">
@@ -252,7 +252,7 @@
                           </div><!--/.col-xs-12.col-sm-9-->
 
                           <div class="col-md-4 sidebar-offcanvas" id="sidebar" role="navigation">
-                            <h2>Concert Feed</h2>
+                            <h2>Latest Tracks</h2>
 
                             <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/27789150&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
                           </div><!--/.sidebar-offcanvas-->
