Added top stories and artists to index

--- a/index.html
+++ b/index.html
@@ -141,18 +141,18 @@
             <h3 class="content-title">Top Stories</h3>
             <!-- First Story -->
             <div class="story">
-              <img src="http://lorempixel.com/100/100" alt="">
-              <p class="content-line">The Bosstones Live</p>
-              <p class="content-line">December 11th</p>
-              <p  class="content-line">@ The House of Blues</p>              
+              <img src="./images/concert1.jpg" alt="">
+              <p class="content-line">Capital Cities' concert review<br/>
+              December 23th</p>
+<!--               <p  class="content-line">@ The House of Blues</p>       -->        
             </div>
 
             <!-- Second Story -->
             <div class="story">
-              <img src="http://lorempixel.com/100/100" alt="">
-              <p class="content-line">The Bosstones Live</p>
-              <p class="content-line">December 11th</p>
-              <p  class="content-line">@ The House of Blues</p>
+              <img src="./images/julian.jpg" alt="">
+              <p class="content-line">Artpower! Julian Page<br/>
+              December 20th<br/>
+              @ The House of Blues</p>
             </div>
           </div>
           <!-- End Top Stories -->
@@ -161,10 +161,22 @@
           <div class="col-md-4 content-block">
           <!-- Title -->
           <h3 class="content-title">Hot Artists</h3>
-
+<div class="story">
+              <img src="./images/fish.jpg" alt="">
+              <p class="content-line">71 Fish</p>
+              <br/>
+<!--               <p  class="content-line">@ The House of Blues</p>       -->        
+            </div>
           <!-- First Artist -->
 
           <!-- Second Artist -->
+
+          <div class="story">
+              <img src="./images/ad.jpg" alt="">
+              <p class="content-line">Ad Seg</p>
+              <br/>
+<!--               <p  class="content-line">@ The House of Blues</p>       -->        
+            </div>
             
           </div>
           <!-- End Hot Artists -->
