Added spotlight to index

--- a/index.html
+++ b/index.html
@@ -187,6 +187,22 @@
         <div class="col-md-3 spotlight">
         <!-- Title -->
         <h3 class="content-title">Spotlight</h3>
+
+        <div class="story">
+              <img src="./images/elephant.jpg" alt="">
+              <p class="content-line">Black Star Elephant<br/>December 25</p>
+<!--               <p  class="content-line">@ The House of Blues</p>       -->        
+            </div>
+          <!-- First Artist -->
+
+          <!-- Second Artist -->
+
+          <div class="story">
+              <img src="./images/growlers.jpg" alt="">
+              <p class="content-line">Growlers at Belly Up<br/>December 27</p>
+              <br/>
+<!--               <p  class="content-line">@ The House of Blues</p>       -->        
+            </div>
           
         </div>
         <!-- End Spotlight -->
