--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
   </head>
 
   <body>
-    <!-- Top Bar     -->
+    <!-- Top Bar -->
     <div id="tfheader">
       <div class="container-fluid">
         <div class="row">
           <!-- Title -->
           <div class="title-wrap">
-            <p class="title-text">SDScene</p>
+            <a href="./index.html" class="title-text">SDScene</a>
           </div>
           <!-- HTML for SEARCH BAR -->
           <form id="tfnewsearch" method="get" action="https://www.google.com/search">
@@ -55,6 +55,7 @@
         </div>
       </div>
     </div>
+    <!-- End top bar -->
 
     <!-- Body -->
     <div class="container-fluid">
@@ -64,15 +65,16 @@
           <div class="container-fluid">
               <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="nav-li-final"><a href="#">Events</a></li>
-                <li class="nav-li-final"><a href="#">News</a></li>
-                <li class="nav-li-final"><a href="#">Venues</a></li>
-                <li class="nav-li-final"><a href="#">Artists</a></li>
+                <li class="nav-li-final"><a href="./events.html">Events</a></li>
+                <li class="nav-li-final"><a href="./news.html">News</a></li>
+                <li class="nav-li-final"><a href="./venues.html">Venues</a></li>
+                <li class="nav-li-final"><a href="./artists.html">Artists</a></li>
               </ul>
             </div><!--/.nav-collapse -->
           </div><!--/.container-fluid -->
         </nav>
       </div>
+      <!-- End Static navbar -->
 
       <!-- Carousel -->
       <div class="row">
@@ -243,7 +245,6 @@
         <p class="text-muted">Alfredo Rodriguez, Casey Graff, Melissa Wong. <a href="./design.html">Design Site.</a> &copy; 2014</p>
       </div>
     </footer>
-
 
     <!-- Bootstrap core JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
