Syncronized more pages header, nav, breadcrumbs and footer.

--- a/venues.html
+++ b/venues.html
@@ -50,8 +50,9 @@
           </div>
         </div>
       </div>
+      <!-- End Top Bar -->
 
-<div class="container">
+<div class="container-fluid">
   <!-- Static navbar -->
       <div class="row">
         <nav class="navbar navbar-default" role="navigation">
@@ -70,15 +71,12 @@
       <!-- End Static navbar -->
 
       <!-- Breadcrumbs -->
-     
-        <!-- a simple div with some links -->
       <div class="row">
         <div class="breadcrumb">
           <a href="./index.html">Home</a>
           <a href="#" class="active">Venues</a>
         </div>
       </div>
-      
       <!-- End Breadcrumbs -->
 
   <div class="row row-offcanvas row-offcanvas-right">
