Adding header/footer to more pages

--- a/bellyup.html
+++ b/bellyup.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>LocalMusic</title>
+    <title>SDScene - Bellyup</title>
 
     <link href="./css/offcanvas.css" rel="stylesheet">
     <link href="./yamm/yamm.css" rel="stylesheet">
@@ -57,7 +57,7 @@
       </div>
       <!-- End Top Bar -->
 
-    <div class="container">
+    <div class="container-fluid">
       <!-- Static navbar -->
       <div class="row">
         <nav class="navbar navbar-default" role="navigation">
@@ -211,7 +211,13 @@ Dec 12: Pepper, the Movement, New Beat Fund</br>
       </footer>
 
     </div><!--/.container-->
-
+    
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Alfredo Rodriguez, Casey Graff, Melissa Wong. <a href="./design.html">Design Site.</a> &copy; 2014</p>
+      </div>
+    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
