--- a/bowen.html
+++ b/bowen.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../../favicon.ico">
 
-  <title>LocalMusic</title>
+  <title>SDScene - Bowen</title>
 
   <!-- Bootstrap core CSS -->
   <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -196,7 +196,12 @@
 
                       </div><!--/.container-->
 
-
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Alfredo Rodriguez, Casey Graff, Melissa Wong. <a href="./design.html">Design Site.</a> &copy; 2014</p>
+      </div>
+    </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
