--- a/venues.html
+++ b/venues.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../../favicon.ico">
 
-  <title>LocalMusic</title>
+  <title>SDScene - Venues</title>
 
   <!-- Bootstrap core CSS -->
   <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -1092,12 +1092,9 @@
 
     Dec 20: Peter Pupping Quartet and Tim Holcombe</br>
 
-<<<<<<< HEAD
 </p> 
  </div>
-=======
 </p>
->>>>>>> b2aefd9a35ed8ba26acd1e8c497f06ebe9d36bd9
 
 
 
@@ -1124,13 +1121,6 @@
   </div>
 </div><!--/.sidebar-offcanvas-->
 </div><!--/row-->
-
-<hr>
-
-<footer>
-  <p>&copy; Company 2014</p>
-</footer>
-
 </div><!--/.container-->
 
     <!-- Footer -->
