--- a/artists.html
+++ b/artists.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Artists</title>
+    <title>SDScene - Artists</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -60,7 +60,7 @@
                 <li class="nav-li-final"><a href="./events.html">Events</a></li>
                 <li class="nav-li-final"><a href="./news.html">News</a></li>
                 <li class="nav-li-final"><a href="./venues.html">Venues</a></li>
-                <li class="nav-li-final"><a href="./artists.html">Artists</a></li>
+                <li class="active nav-li-final"><a href="./artists.html">Artists</a></li>
               </ul>
             </div><!--/.nav-collapse -->
           </div><!--/.container-fluid -->
