--- a/bellyup.html
+++ b/bellyup.html
@@ -66,7 +66,7 @@
               <ul class="nav navbar-nav">
                 <li class="nav-li-final"><a href="./events.html">Events</a></li>
                 <li class="nav-li-final"><a href="./news.html">News</a></li>
-                <li class="nav-li-final"><a href="./venues.html">Venues</a></li>
+                <li class="active nav-li-final"><a href="./venues.html">Venues</a></li>
                 <li class="nav-li-final"><a href="./artists.html">Artists</a></li>
               </ul>
             </div><!--/.nav-collapse -->
